<resources>
    <string name="hello">Hello World, Samkoon Hmi!</string>
    <string name="app_name">Samkoonhmi</string>
    <string name="username">User Name</string>
    <string name="password">PassWord</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="hold_on">Please wait</string>
    <string name="sureValue">Sure</string>
    <string name="datecancel">Cancel</string>
    <string name="datesure">Sure</string>
    <string name="validate">Validate</string>
    <string name="validatepass">Validate PassWord：</string>
    <string name="setting">Settings</string>
    <string name="setting_time">Set time</string>
    <string name="setting_date">Set date</string>
    <string name="setting_title">Date and time</string>
    <string name="setting_close">Close</string>
    <string name="secen_time">Screen time</string>
    <string name="secen_unit">m</string>
    <string name="secen_hint_start">Start secen</string>
    <string name="secen_hint_end">End secen</string>
    <string name="add_user">Add</string>
    <string name="delete_user">Delete</string>
    <string name="alter_user">Alter user</string>
    <string name="add_user_name">Name:</string>
    <string name="add_user_password">Password:</string>
    <string name="add_old_user_password">Old Password</string>
    <string name="add_user_pwd_confirm">Password Confirm:</string>
    <string name="select_group">Select group</string>
    <string name="btn_add_user">Add</string>
    <string name="btn_cancel">Cancel</string>
    <string name="update_name">Update</string>
    <string name="confirm">Confirm</string>
    <string name="add_user_message">Describe:</string>
    <string name="user_manage">User manage</string>
    <string name="user_message">User message</string>
    <string name="group_name">Group</string>
    <string name="exit">Exit</string>
    <string name="hint_pwd_error">Password error!</string>
    <string name="hint_name">User already exists!</string>
    <string name="hint_name_entry">The user is empty!</string>
    <string name="hint_pwd_entry">The Password is empty!</string>
    <string name="hint_pwds_entry">Confirm password is empty!</string>
    <string name="hint_pwd_repeat">Passwords do not match!</string>
    <string name="hint_result_succeed">Add succeed!</string>
    <string name="hint_result_fail">Add fail!</string>
    <string name="hint_select_group">Add group!</string>
    <string name="hint_delete_fail">Delete fail!</string>
    <string name="hint_delete_msg">The user can not be deleted!</string>
    <string name="hint_delete_succeed">Delete succeed!</string>
    <string name="hint_update_fail">Update fail!</string>
    <string name="hint_update_succeed">Update succeed!</string>
    <string name="hint_sure_to_delete">Sure to delete:</string>
    <string name="logout_info">Logout</string>
    <string name="islogining">Loading...!</string>
    <string name="outtime">Has entered the screensaver screen, click anywhere to enter the main interface!</string>
    <string name="userisnull">The user name can not be empty!</string>
    <string name="islogin">Has been in the registry!</string>
    <string name="filenotexist">The Principal state software  not exist,please check</string>
    <string name="namepasswrong">User name or password is incorrect!</string>
    <string name="validatewrong">Verification code input errors, please re-enter!</string>
    <string name="selectcontrol">Selection and then to perform!</string>
    <string name="secen_loading">Loading...</string>
    <string name="recipe_id">ID</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_des">Recipe describe</string>
    <string name="recipe_first">" "</string>
    <string name="recipe_rank"> Rank</string>
    <string name="recipe_add_null">Not be empty!</string>
    <string name="recipe_prompt_num">Enter numbers!</string>
    <string name="recipe_prompt">Prompt:</string>
    <string name="recipe_exists">Already exists!</string>
    <string name="switch_oper">Operation confirm</string>
    <string name="add_messageinfo">Add new message</string>
    <string name="add_messageinfo_title">Title:</string>
    <string name="add_messageinfo_content">Content:</string>
    <string name="eidt_messageinfo">Modify message</string>
    <string name="see_messageinfo">See message</string>
    <string name="addString">Add new message</string>
    <string name="seeString">See message</string>
    <string name="editString">Modify message</string>
    <string name="deleteString">Delete message</string>
    <string name="add_message_success">MessageBoard update success!</string>
    <string name="add_new_message_success">Add new message success!</string>
    <string name="add_new_message_faild">Add new message faild;</string>
    <string name="edit_new_message_success">Modify message success!</string>
    <string name="edit_new_message_faild">Modify message faild!</string>
    <string name="delete_message_success">Delete message success!</string>
    <string name="delete_message_faild">Delete message faild!</string>
    <string name="message_notnull">Message can not be empty!</string>
    <string name="message_long">The message can not exceed 600 bytes!</string>
    <string name="message_more">Message records can not be more than 100, please delete and then add!</string>
    <string name="isupate_system">Do you want to update the system?</string>
    <string name="clr_boardsuccess">Message clear success!</string>
    <string name="clr_boardfail">Message clear failed!</string>
    <string name="plc_station_id">\t PLC station is: \t </string>
    <string name="plc_reg_id">\t\t\t\t PLC register number: </string>
    <string name="addr_value">RW address value：</string>
    <string name="addr_len">\t\t\t\t address len：</string>
    <string name="baud_rate">baund rate：</string>
    <string name="data_bit">,\t data bit：</string>
    <string name="stop_bit">stop bit：</string>
    <string name="check_type">,\t check type：</string>
    <string name="none_check">none check</string>
    <string name="even_check">even check</string>
    <string name="odd_check">odd check</string>
    <string name="ip_addr">IP address：</string>
    <string name="port_id">port number：</string>
    <string name="link_faild">\t connect fail</string>
    <string name="protocol_name">\t\t protocol name：</string>
    <string name="error_info">\t\t error info：</string>
    <string name="write_database">Saving the database to csv file... </string>
    <string name="save_fail_path">Failed to save storage, Because path does not exist</string>
    <string name="save_fail_exist">Failed to save file already exists in the current time</string>
    <string name="save_fail_creat">Save failed Failed to create the export file</string>
    <string name="save_fail_nodata">Save fails, no data in the database</string>
    <string name="save_success">Successfully saved,Recommended: prompt box disappears and then pull out the memory card, file in: \n</string>
    <string name="save_datetime">Date, time \t</string>
    <string name="save_data_title">data</string>
    <string name="recipe_read">Reading recipe from the PLC... </string>
    <string name="recipe_path_noexist">The file path does not exist\n</string>
    <string name="recipe_import">Recipe Group is being imported from a file</string>
    <string name="recipe_import_fail">Import failed</string>
    <string name="recipe_len_error">Import failed, formula elements wrong length</string>
    <string name="recipe_success">Import was successful</string>
    <string name="recipe_file_used">The current recipe file is in use, and an unsuccessful attempt to save</string>
    <string name="recipe_writing_group">Writing a recipe group：</string>
    <string name="recipe_fail_nomedium">Export Failed, U disk or SD card is not recognized</string>
    <string name="recipe_write">writing a recipe to the PLC</string>
    <string name="recipe_issave">Do you want to save the recipe？</string>
    <string name="recipe_yes">yes</string>
    <string name="recipe_no">no</string>
    <string name="recipe_write_sucess">Write the recipe success</string>
    <string name="recipe_write_fail">Failed to write the recipe</string>
    <string name="recipe_cover">Whether to overwrite an existing recipe？</string>
    <string name="recipe_Title">RecipeName, recipeID, recipeDesc</string>
    <string name="recipe_element_name">elemet,</string>
    <string name="cmn_nomal">Communication is normal</string>
    <string name="fun_error">Function code error</string>
    <string name="addr_rang">Address cross-border error</string>
    <string name="value_error">receive value error</string>
    <string name="addr_uread">addr can not read</string>
    <string name="addr_uwrite">addr can not write</string>
    <string name="data_len_error">The length of the received data error</string>
    <string name="check_ok_urcv_all">Check success but not long enough</string>
    <string name="data_check_error">Data Check error</string>
    <string name="write_send_fail">send Data error, please check Communication port is connect</string>
    <string name="read_recive_fail">receive Data error, please check Communication port is connect</string>
    <string name="write_check_fail">write addr value check error, so write plc failed</string>
    <string name="read_check_fail">read addr value check error, so read plc failed</string>
    <string name="cmn_connect_fail">The unpredictable communication failure, check the communication port is connected</string>
    <string name="proto_not_exsit">The agreement does not exist, please re-download protocol</string>
    <string name="proto_type_error">Protocol type error, please check whether the works to select the correct protocol</string>
    <string name="unrcv_all_data">The data reception unfinished , so continue to receive</string>
    <string name="no_rcv_data">Fails to receive data</string>
    <string name="station_error">Station number wrong</string>
    <string name="addr_len_error">Address length error</string>
    <string name="call_proto_error">The call protocol type of error, the master agreement calls slave protocol may Conversely</string>
    <string name="send_data_fail">send Data error, please check Communication port is connect</string>
    <string name="rcv_data_fail">receive Data error, please check Communication port is connect</string>
    <string name="change_rate_9600">Need to modify the baud rate to 9600</string>
    <string name="change_rate_115200">Need to modify the baud rate to 115200</string>
    <string name="default_code">Unpredictable error, please contact technical support</string>
    <string name="ak_update">update...</string>
    <string name="setting_time_error">Time setting error!</string>
    <string name="time_error">Time error!</string>
    <string name="no_user">No user!</string>
    <string name="add_recipe">Add recipe</string>
    <string name="modify_recipes">Mmodify recipes</string>
    <string name="u">U Disk</string>
    <string name="sd">SD Code</string>
    <string name="email_from">From：</string>
    <string name="email_to">To：</string>
    <string name="email_set">Set</string>
    <string name="email_add">Add</string>
    <string name="email_del">Del</string>
    <string name="email_files">Accessory</string>
    <string name="email_send">Send</string>
    <string name="email_sure">Sure</string>
    <string name="email_cancel">Cancel</string>
    <string name="email_input_tip">Input new mailbox：</string>
    <string name="email_input_content">please input mail content</string>
    <string name="email_exit">exit</string>
    <string name="recipe_copy_tile">Copying recipe data</string>
    <string name="recipe_copy_frme">From:</string>
    <string name="recipe_copy_to">To:</string>
    <string name="recipe_data_location">source</string>
    <string name="recipe_data_memory">memory</string>
</resources>