<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/date_dialog_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/messageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/add"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/addString" />

                    <RadioButton
                        android:id="@+id/see"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/seeString" />

                    <RadioButton
                        android:id="@+id/edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/editString" />

                    <RadioButton
                        android:id="@+id/delete"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deleteString" />
                </RadioGroup>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/message_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/message_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>