<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/email_main_bg">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        android:gravity="center_vertical"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:text="@string/email_from"
            />
        <TextView 
            android:id="@+id/email_from"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="5dp"
            android:singleLine="true"
            />
        <Button
            android:id="@+id/email_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:text="@string/email_set" 
            android:textColor="@color/white"
            android:background="@drawable/email_small_btn"
            />
        
        <Button 
            android:id="@+id/email_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/email_exit"
            android:textColor="@color/white"
            android:background="@drawable/email_small_btn"
            />
    </LinearLayout>
    
   
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        android:layout_gravity="center_vertical"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:text="@string/email_to"/>
        <TextView 
            android:id="@+id/email_to"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="left|center_vertical"
            android:paddingLeft="5dp"
            android:singleLine="true"
            />
        <Button 
            android:id="@+id/email_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_add"
            android:layout_marginLeft="0dp"
            android:textColor="@color/white"
            android:background="@drawable/email_small_btn"
            />
        <Button 
            android:id="@+id/email_reduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/email_del"
            android:textColor="@color/white"
            android:background="@drawable/email_small_btn"
            />
         </LinearLayout>
          
         <EditText
             android:id="@+id/email_content"
             android:layout_width="fill_parent"
             android:layout_height="106dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="8dp"
             android:maxLines="4"
             android:padding="3dp"
             android:hint="@string/email_input_content"
             android:gravity="left|top"
             android:background="@drawable/email_main_input"
             />
         <LinearLayout 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp">
             <Button
                 android:id="@+id/email_addfile"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="@string/email_files"
                 android:textColor="@color/white"
                 android:background="@drawable/email_bigbtn"
                   />
             <Button 
                 android:id="@+id/email_send"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:text="@string/email_send"
                 android:textColor="@color/white"
                 android:background="@drawable/email_bigbtn"/>
            </LinearLayout>
</LinearLayout>