<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="336dp"
    android:layout_height="252dp"
    android:orientation="vertical" 
    android:background="@drawable/recipe_select_bg">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"   
        android:text="@string/recipe_copy_tile"   
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp" 
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:textColor="@color/black" 
            android:text="@string/recipe_copy_frme"
            />
        <Spinner
            android:id="@+id/recipe_copy_from"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/recipe_select_frame"
               />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp" 
        android:gravity="center_vertical"
        >
        <TextView 
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:textColor="@color/black"
            android:text="@string/recipe_copy_to"/>
        <Spinner 
            android:id="@+id/recipe_copy_to"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/recipe_select_frame"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:gravity="left"
            android:text="@string/recipe_data_location"
            />
        <RadioGroup
            android:id="@+id/recipe_copy_seletc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" 
            android:orientation="horizontal"
            >
            <RadioButton 
                style="@style/image_radiobox"
                android:id="@+id/recipe_copy_from_U"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/u"
                />
            <RadioButton
                style="@style/image_radiobox"
                android:id="@+id/recipe_copy_from_sd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:text="@string/sd"
                />
            <RadioButton 
                style="@style/image_radiobox"
                android:id="@+id/recipe_copy_from_memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/black"
                android:text="@string/recipe_data_memory"
                />
        </RadioGroup>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"        
        android:layout_marginTop="22dp"
        >
        <Button 
            android:id="@+id/recipe_copy_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sureValue"
            android:textColor="@color/white"
            android:background="@drawable/email_bigbtn"
            />
        <Button 
            android:id="@+id/recipde_copy_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:background="@drawable/email_bigbtn"
            android:text="@string/cancel"/>
    </LinearLayout>
    

</LinearLayout>