<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/confirm_alpha"
    >
    <TextView 
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_oper"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginBottom="10dip"
        android:layout_marginRight="10dip"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/btn_ok" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            />
        <Button
            android:id="@+id/btn_cancel" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            />
    </LinearLayout>
</RelativeLayout>