<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/date_dialog_bg"
    >
    <TextView 
        android:id="@+id/delete_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="5dip"
        android:textColor="@android:color/white"
        android:layout_weight="2"
        android:textSize="15sp"
        android:text="@string/isupate_system"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="bottom"
        
        >
        <Button
            android:id="@+id/update_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            />
         <Button
            android:id="@+id/update_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            />
    </LinearLayout>
</LinearLayout>