<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/date_dialog_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:layout_marginLeft="5dip"
            android:layout_marginTop="8dip"
            android:text="@string/secen_time"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tag_line_n"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_pre"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/btn_pre"
            />
        <LinearLayout 
            android:layout_width="55dip"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="0dip"
            >
            <EditText
                android:id="@+id/scene_time"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/secen_unit" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/btn_next"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="fill_parent"
            android:layout_height="55dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="55dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/datecancel"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>