<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/email_set_bg" >
    
    <TextView
        android:id="@+id/email_set_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textColor="@color/black"
        android:text="@string/email_add"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        />
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_set_title"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/email_input_tip"
            />
        <EditText 
            android:id="@+id/email_add_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="5dp"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:singleLine="true"
            android:textSize="15sp"
            android:layout_gravity="left|center_vertical"
            android:background="@drawable/email_set_input"
            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        >
        <Button 
            android:id="@+id/setemail_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_sure"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/email_bigbtn"/>
        <Button 
            android:id="@+id/setemail_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/email_cancel"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@drawable/email_bigbtn"/>
    </LinearLayout>
    

</RelativeLayout>